--- a/eval/plot_cmc_roc_sota.ipynb
+++ b/eval/plot_cmc_roc_sota.ipynb
@@ -241,7 +241,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base_mod",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -257,12 +257,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.16"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "2af7c0828f0b3b5e7225bbd11ccca0c2fd23bc46352b2313505dd42dac14eadd"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
